--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-Hello World
+This is a project where i replicated amazon's frontend UI with the help of HTML and CSS.
+This project was made to demonstrate my HTML and CSS skills.
